# wordle

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: api.rs  main.rs  model.rs  tdk_api.rs
