[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figlet-rs = "*"
comfy-table = "5.0"
reqwest = {version="0.11", features=["blocking", "json"]}
serde_json = "1.0"
serde = "1.0"
chrono = { version = "0.4.19", features = ["serde"]}
serde_derive = "1.0"
anyhow = "1.0"
dirs = "4.0"
unicode-segmentation = "1.0"